# arc-marketplace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  requirements.txt  seller_agents.md  todo.md
QA_test/: README.md  autonomous_buyer_chat_demo.html  buyer_agent_chatbot_demo.html  buyer_agent_chatbot_sdk_qa.py  seller.md
backend/: .env.example  AGENTS.md  Dockerfile  README.md  agents_market.db  alembic.ini  package-lock.json  package.json  pyproject.toml  skills-lock.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_marketplace_schema.py  0002_buyer_tables.py  0003_agent_icon_data_url.py  0004_provider_listing_fields.py  0005_onchain_capabilities.py  0006_agent_offering_protocol.py  0006_external_buyer_funding.py  0007_decimal_money_and_constraints.py
backend/src/agents_market/: __init__.py  _env.py  db.py
backend/src/agents_market/arc/: __init__.py
backend/src/agents_market/arc/bridge/: arc_app_kit_bridge_worker.mjs
backend/src/agents_market/arc/buyer/: __init__.py  entry.py  run.py  sdk.py
backend/src/agents_market/arc/cli/: __init__.py  client.py  demo_marketplace.py  deposit.py  keygen.py  register_agent.py
backend/src/agents_market/arc/common/: __init__.py  tool_catalog.py
backend/src/agents_market/arc/seller/: __init__.py  app.py  entry.py
backend/src/agents_market/arc/services/: __init__.py  erc8004.py  payments.py
backend/src/agents_market/marketplace/: __init__.py  models.py  repository.py
backend/tests/: test_seller_app_safety.py
(+73 files in other folders)
